; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bluetooth/sdpd/extr_lan.c_lan_profile_create_ip_subnet.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bluetooth/sdpd/extr_lan.c_lan_profile_create_ip_subnet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32, i32 }
%struct.in_addr = type { i32 }

@.str = private unnamed_addr constant [6 x i8] c"%s/%d\00", align 1
@SDP_DATA_STR8 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32*, i32*, i32)* @lan_profile_create_ip_subnet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @lan_profile_create_ip_subnet(i32* %0, i32* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_4__*, align 8
  %11 = alloca %struct.TYPE_3__*, align 8
  %12 = alloca [32 x i8], align 16
  %13 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %14 = load i32*, i32** %8, align 8
  %15 = bitcast i32* %14 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %15, %struct.TYPE_4__** %10, align 8
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = sext i32 %18 to i64
  %20 = inttoptr i64 %19 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %20, %struct.TYPE_3__** %11, align 8
  %21 = getelementptr inbounds [32 x i8], [32 x i8]* %12, i64 0, i64 0
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 1
  %24 = bitcast i32* %23 to %struct.in_addr*
  %25 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i8* @inet_ntoa(i32 %26)
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i64 @snprintf(i8* %21, i32 32, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* %27, i32 %30)
  store i64 %31, i64* %13, align 8
  %32 = load i64, i64* %13, align 8
  %33 = icmp slt i64 %32, 0
  br i1 %33, label %41, label %34

34:                                               ; preds = %4
  %35 = load i32*, i32** %6, align 8
  %36 = getelementptr inbounds i32, i32* %35, i64 2
  %37 = load i64, i64* %13, align 8
  %38 = getelementptr inbounds i32, i32* %36, i64 %37
  %39 = load i32*, i32** %7, align 8
  %40 = icmp ugt i32* %38, %39
  br i1 %40, label %41, label %42

41:                                               ; preds = %34, %4
  store i64 -1, i64* %5, align 8
  br label %55

42:                                               ; preds = %34
  %43 = load i64, i64* @SDP_DATA_STR8, align 8
  %44 = load i32*, i32** %6, align 8
  %45 = call i32 @SDP_PUT8(i64 %43, i32* %44)
  %46 = load i64, i64* %13, align 8
  %47 = load i32*, i32** %6, align 8
  %48 = call i32 @SDP_PUT8(i64 %46, i32* %47)
  %49 = load i32*, i32** %6, align 8
  %50 = getelementptr inbounds [32 x i8], [32 x i8]* %12, i64 0, i64 0
  %51 = load i64, i64* %13, align 8
  %52 = call i32 @memcpy(i32* %49, i8* %50, i64 %51)
  %53 = load i64, i64* %13, align 8
  %54 = add nsw i64 2, %53
  store i64 %54, i64* %5, align 8
  br label %55

55:                                               ; preds = %42, %41
  %56 = load i64, i64* %5, align 8
  ret i64 %56
}

declare dso_local i64 @snprintf(i8*, i32, i8*, i8*, i32) #1

declare dso_local i8* @inet_ntoa(i32) #1

declare dso_local i32 @SDP_PUT8(i64, i32*) #1

declare dso_local i32 @memcpy(i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
